--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
                 <div class="col">
                     <form id="form-search"><!-- Search Col  -->
                         <h2>Search for a City</h2>
-                        <input id= "input-city" type="text" placeholder="Enter City">
+                        <input id="input-city" type="text" placeholder="Enter City">
                         <button class = "btn btn-primary  btn-block"> Search</button> 
                     </form>
 
-                    <ul>
+                    <ul id= "search-history">
                         <li>Perth</li>
                         <li>Melbourne</li>
                     </ul>
